[package]
name = "dislog-hal"
version = "0.1.0"
authors = ["tiannian <dtiannian@aliyun.com>", "xujian009 <s1473561555@sina.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
hex = { version = "0.4", default-features = false }
rand = "0.7.3"
serde = { version = "1.0", features = ["derive"] }

[dev-dependencies.cargo-husky]
version = "1"
default-features = false
features = ["precommit-hook", "run-cargo-fmt", "run-cargo-test", "run-cargo-clippy"]
